# vscode-cpp-dev-containers

./: .gitignore  README.md
containers/cpp-grpc-google-cloud/: Dockerfile
containers/cpp-grpc-google-cloud-mssql/: Dockerfile
containers/cpp-grpc-google-cloud-mssql/base-scripts/: install-vcpkg.sh
containers/cpp-grpc-google-cloud-mssql/library-scripts/: install-chakracore.sh  install-odb.sh  install-sqltools.sh
containers/cpp-grpc-google-cloud-mssql/mssql/: install-sqltools.sh
containers/cpp-rest-sdk/: Dockerfile
containers/cpp-webtoolkit/: Dockerfile
cpp-grpc-google-cloud-mssql/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
cpp-grpc-google-cloud-mssql/test-project/: CMakeLists.txt  Main.cpp
cpp-grpc-google-cloud/.devcontainer/: Dockerfile  devcontainer.json
cpp-grpc-google-cloud/test-project/: CMakeLists.txt
cpp-grpc-google-cloud/test-project/Client/: CMakeLists.txt  Main.cpp
cpp-grpc-google-cloud/test-project/Models/: User.hpp
cpp-grpc-google-cloud/test-project/Modules/: Grpc.cmake
cpp-grpc-google-cloud/test-project/Protos/: CMakeLists.txt  UserService.proto
cpp-grpc-google-cloud/test-project/Protos/Includes/: UserService.grpc.pb.cc  UserService.grpc.pb.h  UserService.pb.cc  UserService.pb.h  UserService_mock.grpc.pb.h
cpp-grpc-google-cloud/test-project/Server/: CMakeLists.txt  Main.cpp
cpp-rest-sdk/.devcontainer/: Dockerfile  devcontainer.json
cpp-rest-sdk/test-project/: CMakeLists.txt  CasaLens.cpp  CasaLens.hpp  DataFetcher.cpp  Headers.hpp  Main.cpp
cpp-rest-sdk/test-project/assets/: AppCode.html
cpp-rest-sdk/test-project/assets/css/: default.css
cpp-rest-sdk/test-project/assets/js/: default.js
cpp-webtoolkit/.devcontainer/: Dockerfile  devcontainer.json
cpp-webtoolkit/test-project/: .clang-format  CMakeLists.txt  Main.cpp  editSide-template.xml
